--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -30,7 +30,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	.logo a {
+	.logo {
 		background: url("/img/logo.png") no-repeat;
 		display: block;
 		width: 224px;
